--- a/index.html
+++ b/index.html
@@ -6,5 +6,17 @@
   </head>
   <body>
 
+  <header>
+    <div class="logo">
+      <img src="resources/images/img-tea-cozy-logo.png"></img>
+    </div>
+    <nav class="menu">
+      <span><a href="#">Mission</a></span>
+      <span><a href="#">Featured Tea</a></span>
+      <span><a href="#">Locations</a></span>
+    </nav>
+  </header>
+
+
   </body>
 </html>
